// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`V2BasicInfo handles region with no phone prefix 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RCTScrollView
        automaticallyAdjustContentInsets={false}
        contentInset={
          {
            "bottom": 0,
          }
        }
        enableAutomaticScroll={true}
        enableOnAndroid={false}
        enableResetScrollToCoords={true}
        extraHeight={75}
        extraScrollHeight={0}
        getScrollResponder={[Function]}
        handleOnScroll={[Function]}
        keyboardDismissMode="interactive"
        keyboardOpeningTime={250}
        keyboardShouldPersistTaps="handled"
        keyboardSpace={0}
        onScroll={[Function]}
        resetKeyboardSpace={[Function]}
        scrollEventThrottle={1}
        scrollForExtraHeightOnAndroid={[Function]}
        scrollIntoView={[Function]}
        scrollToEnd={[Function]}
        scrollToFocusedInput={[Function]}
        scrollToPosition={[Function]}
        showsVerticalScrollIndicator={false}
        update={[Function]}
        viewIsInsideTabBar={false}
      >
        <View>
          <View
            style={
              [
                {
                  "padding": 15,
                  "paddingHorizontal": 16,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingBottom": 12,
                  "width": "100%",
                }
              }
              testID="deposit-progress-container"
            >
              <View
                style={
                  [
                    [
                      {
                        "borderRadius": 2,
                        "flex": 1,
                        "height": 4,
                      },
                      {
                        "backgroundColor": "#4459ff",
                      },
                    ],
                    {
                      "marginRight": 10,
                    },
                  ]
                }
                testID="deposit-progress-step-0"
              />
              <View
                style={
                  [
                    [
                      {
                        "borderRadius": 2,
                        "flex": 1,
                        "height": 4,
                      },
                      {
                        "backgroundColor": "#4459ff",
                      },
                    ],
                    {
                      "marginRight": 10,
                    },
                  ]
                }
                testID="deposit-progress-step-1"
              />
              <View
                style={
                  [
                    [
                      {
                        "borderRadius": 2,
                        "flex": 1,
                        "height": 4,
                      },
                      {
                        "backgroundColor": "#2c3dc5",
                      },
                    ],
                    {
                      "marginRight": 10,
                    },
                  ]
                }
                testID="deposit-progress-step-2"
              />
              <View
                style={
                  [
                    [
                      {
                        "borderRadius": 2,
                        "flex": 1,
                        "height": 4,
                      },
                      {
                        "backgroundColor": "#b7bbc8",
                      },
                    ],
                    undefined,
                  ]
                }
                testID="deposit-progress-step-3"
              />
            </View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Bold",
                  "fontSize": 18,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "marginBottom": 4,
                  "marginTop": 24,
                }
              }
            >
              deposit.basic_info.title
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "marginBottom": 16,
                }
              }
            >
              deposit.basic_info.subtitle
            </Text>
            <View
              style={
                {
                  "flexDirection": "row",
                  "gap": 16,
                  "justifyContent": "space-between",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "flexDirection": "column",
                      "marginBottom": 16,
                    },
                    {
                      "flex": 1,
                    },
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "marginBottom": 6,
                    }
                  }
                  testID="label"
                >
                  deposit.basic_info.first_name
                </Text>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#3c4d9d0f",
                      "borderColor": "#b7bbc866",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "height": 48,
                      "opacity": 1,
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="textfield"
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="words"
                      autoComplete="given-name"
                      autoFocus={false}
                      editable={true}
                      keyboardAppearance="light"
                      multiline={false}
                      numberOfLines={1}
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      onSubmitEditing={[Function]}
                      placeholder="deposit.basic_info.first_name"
                      placeholderTextColor="#686e7d"
                      returnKeyType="next"
                      style={
                        {
                          "backgroundColor": "inherit",
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "height": 46,
                          "letterSpacing": 0,
                          "lineHeight": 0,
                          "opacity": 1,
                          "textAlignVertical": "center",
                        }
                      }
                      testID="first-name-input"
                      textContentType="givenName"
                      value=""
                    />
                  </View>
                </View>
              </View>
              <View
                style={
                  [
                    {
                      "flexDirection": "column",
                      "marginBottom": 16,
                    },
                    {
                      "flex": 1,
                    },
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "marginBottom": 6,
                    }
                  }
                  testID="label"
                >
                  deposit.basic_info.last_name
                </Text>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#3c4d9d0f",
                      "borderColor": "#b7bbc866",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "height": 48,
                      "opacity": 1,
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="textfield"
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="words"
                      autoComplete="family-name"
                      autoFocus={false}
                      editable={true}
                      keyboardAppearance="light"
                      multiline={false}
                      numberOfLines={1}
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      onSubmitEditing={[Function]}
                      placeholder="deposit.basic_info.last_name"
                      placeholderTextColor="#686e7d"
                      returnKeyType="next"
                      style={
                        {
                          "backgroundColor": "inherit",
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "height": 46,
                          "letterSpacing": 0,
                          "lineHeight": 0,
                          "opacity": 1,
                          "textAlignVertical": "center",
                        }
                      }
                      testID="last-name-input"
                      textContentType="familyName"
                      value=""
                    />
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "flexDirection": "column",
                    "marginBottom": 16,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginBottom": 6,
                  }
                }
                testID="label"
              >
                deposit.basic_info.phone_number
              </Text>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#3c4d9d0f",
                    "borderColor": "#b7bbc866",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "height": 48,
                    "opacity": 1,
                    "paddingHorizontal": 16,
                  }
                }
                testID="textfield"
              >
                <View
                  style={
                    {
                      "marginRight": 12,
                    }
                  }
                  testID="textfield-startacccessory"
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 4,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 18,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      🇬🇧
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <TextInput
                    autoComplete="tel"
                    autoFocus={false}
                    editable={true}
                    keyboardAppearance="light"
                    keyboardType="phone-pad"
                    multiline={false}
                    numberOfLines={1}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onSubmitEditing={[Function]}
                    placeholder="XXXX XXX XXXX"
                    placeholderTextColor="#686e7d"
                    style={
                      {
                        "backgroundColor": "inherit",
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "height": 46,
                        "letterSpacing": 0,
                        "lineHeight": 0,
                        "opacity": 1,
                        "textAlignVertical": "center",
                      }
                    }
                    textContentType="telephoneNumber"
                    value=""
                  />
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "flexDirection": "column",
                    "marginBottom": 16,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginBottom": 6,
                  }
                }
                testID="label"
              >
                deposit.basic_info.date_of_birth
              </Text>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#3c4d9d0f",
                    "borderColor": "#b7bbc866",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "height": 48,
                    "opacity": 1,
                    "paddingHorizontal": 16,
                  }
                }
                testID="textfield"
              >
                <View
                  style={
                    {
                      "marginRight": 12,
                    }
                  }
                  testID="textfield-startacccessory"
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={20}
                    name="Calendar"
                    style={
                      {
                        "height": 20,
                        "width": 20,
                      }
                    }
                    width={20}
                  />
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <TouchableOpacity
                    activeOpacity={0.7}
                    onPress={[Function]}
                    style={
                      {
                        "flex": 1,
                        "height": "100%",
                      }
                    }
                  >
                    <TextInput
                      editable={false}
                      placeholder="01/01/2000"
                      placeholderTextColor="#b7bbc8"
                      pointerEvents="none"
                      style={
                        {
                          "color": "#121314",
                          "flex": 1,
                          "fontSize": 16,
                          "height": "100%",
                          "textAlign": "left",
                        }
                      }
                      testID="date-of-birth-input"
                      value=""
                    />
                  </TouchableOpacity>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View>
      <View
        style={
          [
            {
              "padding": 15,
              "paddingHorizontal": 16,
            },
            undefined,
            {
              "gap": 8,
            },
          ]
        }
      >
        <View
          accessibilityRole="none"
          accessible={true}
          style={
            {
              "backgroundColor": "#3c4d9d0f",
              "borderRadius": 8,
              "marginVertical": 8,
              "padding": 16,
              "paddingVertical": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "flex": -1,
                }
              }
              testID="listitemcolumn"
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={24}
                name="SecurityKey"
                style={
                  {
                    "height": 24,
                    "width": 24,
                  }
                }
                width={24}
              />
            </View>
            <View
              accessible={false}
              style={
                {
                  "width": 8,
                }
              }
              testID="listitem-gap"
            />
            <View
              style={
                {
                  "flex": 1,
                }
              }
              testID="listitemcolumn"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 12,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                  }
                }
              >
                deposit.privacy_section.transak
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 12,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                  }
                }
              >
                deposit.privacy_section.metamask
              </Text>
            </View>
          </View>
        </View>
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={1}
          disabled={false}
          loading={false}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "#121314",
              "borderRadius": 12,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingHorizontal": 16,
            }
          }
          testID="continue-button"
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ffffff",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            deposit.basic_info.continue
          </Text>
        </TouchableOpacity>
        <SvgMock
          fill="currentColor"
          name="powered-by-transak-logo"
          style={
            {
              "color": "#686e7d",
              "height": 24,
            }
          }
        />
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`V2BasicInfo matches snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RCTScrollView
        automaticallyAdjustContentInsets={false}
        contentInset={
          {
            "bottom": 0,
          }
        }
        enableAutomaticScroll={true}
        enableOnAndroid={false}
        enableResetScrollToCoords={true}
        extraHeight={75}
        extraScrollHeight={0}
        getScrollResponder={[Function]}
        handleOnScroll={[Function]}
        keyboardDismissMode="interactive"
        keyboardOpeningTime={250}
        keyboardShouldPersistTaps="handled"
        keyboardSpace={0}
        onScroll={[Function]}
        resetKeyboardSpace={[Function]}
        scrollEventThrottle={1}
        scrollForExtraHeightOnAndroid={[Function]}
        scrollIntoView={[Function]}
        scrollToEnd={[Function]}
        scrollToFocusedInput={[Function]}
        scrollToPosition={[Function]}
        showsVerticalScrollIndicator={false}
        update={[Function]}
        viewIsInsideTabBar={false}
      >
        <View>
          <View
            style={
              [
                {
                  "padding": 15,
                  "paddingHorizontal": 16,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingBottom": 12,
                  "width": "100%",
                }
              }
              testID="deposit-progress-container"
            >
              <View
                style={
                  [
                    [
                      {
                        "borderRadius": 2,
                        "flex": 1,
                        "height": 4,
                      },
                      {
                        "backgroundColor": "#4459ff",
                      },
                    ],
                    {
                      "marginRight": 10,
                    },
                  ]
                }
                testID="deposit-progress-step-0"
              />
              <View
                style={
                  [
                    [
                      {
                        "borderRadius": 2,
                        "flex": 1,
                        "height": 4,
                      },
                      {
                        "backgroundColor": "#4459ff",
                      },
                    ],
                    {
                      "marginRight": 10,
                    },
                  ]
                }
                testID="deposit-progress-step-1"
              />
              <View
                style={
                  [
                    [
                      {
                        "borderRadius": 2,
                        "flex": 1,
                        "height": 4,
                      },
                      {
                        "backgroundColor": "#2c3dc5",
                      },
                    ],
                    {
                      "marginRight": 10,
                    },
                  ]
                }
                testID="deposit-progress-step-2"
              />
              <View
                style={
                  [
                    [
                      {
                        "borderRadius": 2,
                        "flex": 1,
                        "height": 4,
                      },
                      {
                        "backgroundColor": "#b7bbc8",
                      },
                    ],
                    undefined,
                  ]
                }
                testID="deposit-progress-step-3"
              />
            </View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Bold",
                  "fontSize": 18,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "marginBottom": 4,
                  "marginTop": 24,
                }
              }
            >
              deposit.basic_info.title
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "marginBottom": 16,
                }
              }
            >
              deposit.basic_info.subtitle
            </Text>
            <View
              style={
                {
                  "flexDirection": "row",
                  "gap": 16,
                  "justifyContent": "space-between",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "flexDirection": "column",
                      "marginBottom": 16,
                    },
                    {
                      "flex": 1,
                    },
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "marginBottom": 6,
                    }
                  }
                  testID="label"
                >
                  deposit.basic_info.first_name
                </Text>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#3c4d9d0f",
                      "borderColor": "#b7bbc866",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "height": 48,
                      "opacity": 1,
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="textfield"
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="words"
                      autoComplete="given-name"
                      autoFocus={false}
                      editable={true}
                      keyboardAppearance="light"
                      multiline={false}
                      numberOfLines={1}
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      onSubmitEditing={[Function]}
                      placeholder="deposit.basic_info.first_name"
                      placeholderTextColor="#686e7d"
                      returnKeyType="next"
                      style={
                        {
                          "backgroundColor": "inherit",
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "height": 46,
                          "letterSpacing": 0,
                          "lineHeight": 0,
                          "opacity": 1,
                          "textAlignVertical": "center",
                        }
                      }
                      testID="first-name-input"
                      textContentType="givenName"
                      value=""
                    />
                  </View>
                </View>
              </View>
              <View
                style={
                  [
                    {
                      "flexDirection": "column",
                      "marginBottom": 16,
                    },
                    {
                      "flex": 1,
                    },
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "marginBottom": 6,
                    }
                  }
                  testID="label"
                >
                  deposit.basic_info.last_name
                </Text>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#3c4d9d0f",
                      "borderColor": "#b7bbc866",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "height": 48,
                      "opacity": 1,
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="textfield"
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="words"
                      autoComplete="family-name"
                      autoFocus={false}
                      editable={true}
                      keyboardAppearance="light"
                      multiline={false}
                      numberOfLines={1}
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      onSubmitEditing={[Function]}
                      placeholder="deposit.basic_info.last_name"
                      placeholderTextColor="#686e7d"
                      returnKeyType="next"
                      style={
                        {
                          "backgroundColor": "inherit",
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "height": 46,
                          "letterSpacing": 0,
                          "lineHeight": 0,
                          "opacity": 1,
                          "textAlignVertical": "center",
                        }
                      }
                      testID="last-name-input"
                      textContentType="familyName"
                      value=""
                    />
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "flexDirection": "column",
                    "marginBottom": 16,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginBottom": 6,
                  }
                }
                testID="label"
              >
                deposit.basic_info.phone_number
              </Text>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#3c4d9d0f",
                    "borderColor": "#b7bbc866",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "height": 48,
                    "opacity": 1,
                    "paddingHorizontal": 16,
                  }
                }
                testID="textfield"
              >
                <View
                  style={
                    {
                      "marginRight": 12,
                    }
                  }
                  testID="textfield-startacccessory"
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 4,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 18,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      🇺🇸
                    </Text>
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 14,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      +1
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <TextInput
                    autoComplete="tel"
                    autoFocus={false}
                    editable={true}
                    keyboardAppearance="light"
                    keyboardType="phone-pad"
                    multiline={false}
                    numberOfLines={1}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onSubmitEditing={[Function]}
                    placeholder="(XXX) XXX-XXXX"
                    placeholderTextColor="#686e7d"
                    style={
                      {
                        "backgroundColor": "inherit",
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "height": 46,
                        "letterSpacing": 0,
                        "lineHeight": 0,
                        "opacity": 1,
                        "textAlignVertical": "center",
                      }
                    }
                    textContentType="telephoneNumber"
                    value=""
                  />
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "flexDirection": "column",
                    "marginBottom": 16,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginBottom": 6,
                  }
                }
                testID="label"
              >
                deposit.basic_info.date_of_birth
              </Text>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#3c4d9d0f",
                    "borderColor": "#b7bbc866",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "height": 48,
                    "opacity": 1,
                    "paddingHorizontal": 16,
                  }
                }
                testID="textfield"
              >
                <View
                  style={
                    {
                      "marginRight": 12,
                    }
                  }
                  testID="textfield-startacccessory"
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={20}
                    name="Calendar"
                    style={
                      {
                        "height": 20,
                        "width": 20,
                      }
                    }
                    width={20}
                  />
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <TouchableOpacity
                    activeOpacity={0.7}
                    onPress={[Function]}
                    style={
                      {
                        "flex": 1,
                        "height": "100%",
                      }
                    }
                  >
                    <TextInput
                      editable={false}
                      placeholder="01/01/2000"
                      placeholderTextColor="#b7bbc8"
                      pointerEvents="none"
                      style={
                        {
                          "color": "#121314",
                          "flex": 1,
                          "fontSize": 16,
                          "height": "100%",
                          "textAlign": "left",
                        }
                      }
                      testID="date-of-birth-input"
                      value=""
                    />
                  </TouchableOpacity>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "flexDirection": "column",
                    "marginBottom": 16,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  {
                    "marginBottom": 6,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 8,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    deposit.basic_info.social_security_number
                  </Text>
                  <TouchableOpacity
                    testID="ssn-info-button"
                  >
                    <SvgMock
                      color="#686e7d"
                      fill="currentColor"
                      height={16}
                      name="Info"
                      style={
                        {
                          "height": 16,
                          "width": 16,
                        }
                      }
                      width={16}
                    />
                  </TouchableOpacity>
                </View>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#3c4d9d0f",
                    "borderColor": "#b7bbc866",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "height": 48,
                    "opacity": 1,
                    "paddingHorizontal": 16,
                  }
                }
                testID="textfield"
              >
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <TextInput
                    autoComplete="off"
                    autoFocus={false}
                    editable={true}
                    keyboardAppearance="light"
                    keyboardType="number-pad"
                    maxLength={11}
                    multiline={false}
                    numberOfLines={1}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onSubmitEditing={[Function]}
                    placeholder="XXX-XX-XXXX"
                    placeholderTextColor="#686e7d"
                    returnKeyType="done"
                    secureTextEntry={true}
                    style={
                      {
                        "backgroundColor": "inherit",
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "height": 46,
                        "letterSpacing": 0,
                        "lineHeight": 0,
                        "opacity": 1,
                        "textAlignVertical": "center",
                      }
                    }
                    testID="ssn-input"
                    textContentType="none"
                    value=""
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View>
      <View
        style={
          [
            {
              "padding": 15,
              "paddingHorizontal": 16,
            },
            undefined,
            {
              "gap": 8,
            },
          ]
        }
      >
        <View
          accessibilityRole="none"
          accessible={true}
          style={
            {
              "backgroundColor": "#3c4d9d0f",
              "borderRadius": 8,
              "marginVertical": 8,
              "padding": 16,
              "paddingVertical": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "flex": -1,
                }
              }
              testID="listitemcolumn"
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={24}
                name="SecurityKey"
                style={
                  {
                    "height": 24,
                    "width": 24,
                  }
                }
                width={24}
              />
            </View>
            <View
              accessible={false}
              style={
                {
                  "width": 8,
                }
              }
              testID="listitem-gap"
            />
            <View
              style={
                {
                  "flex": 1,
                }
              }
              testID="listitemcolumn"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 12,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                  }
                }
              >
                deposit.privacy_section.transak
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 12,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                  }
                }
              >
                deposit.privacy_section.metamask
              </Text>
            </View>
          </View>
        </View>
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={1}
          disabled={false}
          loading={false}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "#121314",
              "borderRadius": 12,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingHorizontal": 16,
            }
          }
          testID="continue-button"
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ffffff",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            deposit.basic_info.continue
          </Text>
        </TouchableOpacity>
        <SvgMock
          fill="currentColor"
          name="powered-by-transak-logo"
          style={
            {
              "color": "#686e7d",
              "height": 24,
            }
          }
        />
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`V2BasicInfo matches snapshot for non-US region 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RCTScrollView
        automaticallyAdjustContentInsets={false}
        contentInset={
          {
            "bottom": 0,
          }
        }
        enableAutomaticScroll={true}
        enableOnAndroid={false}
        enableResetScrollToCoords={true}
        extraHeight={75}
        extraScrollHeight={0}
        getScrollResponder={[Function]}
        handleOnScroll={[Function]}
        keyboardDismissMode="interactive"
        keyboardOpeningTime={250}
        keyboardShouldPersistTaps="handled"
        keyboardSpace={0}
        onScroll={[Function]}
        resetKeyboardSpace={[Function]}
        scrollEventThrottle={1}
        scrollForExtraHeightOnAndroid={[Function]}
        scrollIntoView={[Function]}
        scrollToEnd={[Function]}
        scrollToFocusedInput={[Function]}
        scrollToPosition={[Function]}
        showsVerticalScrollIndicator={false}
        update={[Function]}
        viewIsInsideTabBar={false}
      >
        <View>
          <View
            style={
              [
                {
                  "padding": 15,
                  "paddingHorizontal": 16,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingBottom": 12,
                  "width": "100%",
                }
              }
              testID="deposit-progress-container"
            >
              <View
                style={
                  [
                    [
                      {
                        "borderRadius": 2,
                        "flex": 1,
                        "height": 4,
                      },
                      {
                        "backgroundColor": "#4459ff",
                      },
                    ],
                    {
                      "marginRight": 10,
                    },
                  ]
                }
                testID="deposit-progress-step-0"
              />
              <View
                style={
                  [
                    [
                      {
                        "borderRadius": 2,
                        "flex": 1,
                        "height": 4,
                      },
                      {
                        "backgroundColor": "#4459ff",
                      },
                    ],
                    {
                      "marginRight": 10,
                    },
                  ]
                }
                testID="deposit-progress-step-1"
              />
              <View
                style={
                  [
                    [
                      {
                        "borderRadius": 2,
                        "flex": 1,
                        "height": 4,
                      },
                      {
                        "backgroundColor": "#2c3dc5",
                      },
                    ],
                    {
                      "marginRight": 10,
                    },
                  ]
                }
                testID="deposit-progress-step-2"
              />
              <View
                style={
                  [
                    [
                      {
                        "borderRadius": 2,
                        "flex": 1,
                        "height": 4,
                      },
                      {
                        "backgroundColor": "#b7bbc8",
                      },
                    ],
                    undefined,
                  ]
                }
                testID="deposit-progress-step-3"
              />
            </View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Bold",
                  "fontSize": 18,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "marginBottom": 4,
                  "marginTop": 24,
                }
              }
            >
              deposit.basic_info.title
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "marginBottom": 16,
                }
              }
            >
              deposit.basic_info.subtitle
            </Text>
            <View
              style={
                {
                  "flexDirection": "row",
                  "gap": 16,
                  "justifyContent": "space-between",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "flexDirection": "column",
                      "marginBottom": 16,
                    },
                    {
                      "flex": 1,
                    },
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "marginBottom": 6,
                    }
                  }
                  testID="label"
                >
                  deposit.basic_info.first_name
                </Text>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#3c4d9d0f",
                      "borderColor": "#b7bbc866",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "height": 48,
                      "opacity": 1,
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="textfield"
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="words"
                      autoComplete="given-name"
                      autoFocus={false}
                      editable={true}
                      keyboardAppearance="light"
                      multiline={false}
                      numberOfLines={1}
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      onSubmitEditing={[Function]}
                      placeholder="deposit.basic_info.first_name"
                      placeholderTextColor="#686e7d"
                      returnKeyType="next"
                      style={
                        {
                          "backgroundColor": "inherit",
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "height": 46,
                          "letterSpacing": 0,
                          "lineHeight": 0,
                          "opacity": 1,
                          "textAlignVertical": "center",
                        }
                      }
                      testID="first-name-input"
                      textContentType="givenName"
                      value=""
                    />
                  </View>
                </View>
              </View>
              <View
                style={
                  [
                    {
                      "flexDirection": "column",
                      "marginBottom": 16,
                    },
                    {
                      "flex": 1,
                    },
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "marginBottom": 6,
                    }
                  }
                  testID="label"
                >
                  deposit.basic_info.last_name
                </Text>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#3c4d9d0f",
                      "borderColor": "#b7bbc866",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "height": 48,
                      "opacity": 1,
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="textfield"
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="words"
                      autoComplete="family-name"
                      autoFocus={false}
                      editable={true}
                      keyboardAppearance="light"
                      multiline={false}
                      numberOfLines={1}
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      onSubmitEditing={[Function]}
                      placeholder="deposit.basic_info.last_name"
                      placeholderTextColor="#686e7d"
                      returnKeyType="next"
                      style={
                        {
                          "backgroundColor": "inherit",
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "height": 46,
                          "letterSpacing": 0,
                          "lineHeight": 0,
                          "opacity": 1,
                          "textAlignVertical": "center",
                        }
                      }
                      testID="last-name-input"
                      textContentType="familyName"
                      value=""
                    />
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "flexDirection": "column",
                    "marginBottom": 16,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginBottom": 6,
                  }
                }
                testID="label"
              >
                deposit.basic_info.phone_number
              </Text>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#3c4d9d0f",
                    "borderColor": "#b7bbc866",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "height": 48,
                    "opacity": 1,
                    "paddingHorizontal": 16,
                  }
                }
                testID="textfield"
              >
                <View
                  style={
                    {
                      "marginRight": 12,
                    }
                  }
                  testID="textfield-startacccessory"
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 4,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 18,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      🇬🇧
                    </Text>
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 14,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      +44
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <TextInput
                    autoComplete="tel"
                    autoFocus={false}
                    editable={true}
                    keyboardAppearance="light"
                    keyboardType="phone-pad"
                    multiline={false}
                    numberOfLines={1}
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onSubmitEditing={[Function]}
                    placeholder="XXXX XXX XXXX"
                    placeholderTextColor="#686e7d"
                    style={
                      {
                        "backgroundColor": "inherit",
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "height": 46,
                        "letterSpacing": 0,
                        "lineHeight": 0,
                        "opacity": 1,
                        "textAlignVertical": "center",
                      }
                    }
                    textContentType="telephoneNumber"
                    value=""
                  />
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "flexDirection": "column",
                    "marginBottom": 16,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginBottom": 6,
                  }
                }
                testID="label"
              >
                deposit.basic_info.date_of_birth
              </Text>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#3c4d9d0f",
                    "borderColor": "#b7bbc866",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "height": 48,
                    "opacity": 1,
                    "paddingHorizontal": 16,
                  }
                }
                testID="textfield"
              >
                <View
                  style={
                    {
                      "marginRight": 12,
                    }
                  }
                  testID="textfield-startacccessory"
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={20}
                    name="Calendar"
                    style={
                      {
                        "height": 20,
                        "width": 20,
                      }
                    }
                    width={20}
                  />
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <TouchableOpacity
                    activeOpacity={0.7}
                    onPress={[Function]}
                    style={
                      {
                        "flex": 1,
                        "height": "100%",
                      }
                    }
                  >
                    <TextInput
                      editable={false}
                      placeholder="01/01/2000"
                      placeholderTextColor="#b7bbc8"
                      pointerEvents="none"
                      style={
                        {
                          "color": "#121314",
                          "flex": 1,
                          "fontSize": 16,
                          "height": "100%",
                          "textAlign": "left",
                        }
                      }
                      testID="date-of-birth-input"
                      value=""
                    />
                  </TouchableOpacity>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View>
      <View
        style={
          [
            {
              "padding": 15,
              "paddingHorizontal": 16,
            },
            undefined,
            {
              "gap": 8,
            },
          ]
        }
      >
        <View
          accessibilityRole="none"
          accessible={true}
          style={
            {
              "backgroundColor": "#3c4d9d0f",
              "borderRadius": 8,
              "marginVertical": 8,
              "padding": 16,
              "paddingVertical": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "flex": -1,
                }
              }
              testID="listitemcolumn"
            >
              <SvgMock
                color="#686e7d"
                fill="currentColor"
                height={24}
                name="SecurityKey"
                style={
                  {
                    "height": 24,
                    "width": 24,
                  }
                }
                width={24}
              />
            </View>
            <View
              accessible={false}
              style={
                {
                  "width": 8,
                }
              }
              testID="listitem-gap"
            />
            <View
              style={
                {
                  "flex": 1,
                }
              }
              testID="listitemcolumn"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 12,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                  }
                }
              >
                deposit.privacy_section.transak
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 12,
                    "letterSpacing": 0.25,
                    "lineHeight": 20,
                  }
                }
              >
                deposit.privacy_section.metamask
              </Text>
            </View>
          </View>
        </View>
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={1}
          disabled={false}
          loading={false}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "#121314",
              "borderRadius": 12,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "overflow": "hidden",
              "paddingHorizontal": 16,
            }
          }
          testID="continue-button"
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ffffff",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            deposit.basic_info.continue
          </Text>
        </TouchableOpacity>
        <SvgMock
          fill="currentColor"
          name="powered-by-transak-logo"
          style={
            {
              "color": "#686e7d",
              "height": 24,
            }
          }
        />
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
